# gemmi-disorder

./: .gitignore  LICENSE  README.md  TODO.txt  pyproject.toml
docs/: STYLE_NOTES.md  gemmi_interop_quirk.md  tiled_3dpdf_proposal.md
examples/: md_fcc_diffuse.py
gemmi_disorder/: __init__.py  averaging.py  grid.py  io.py  pdf.py  scattering.py  structures.py
tests/: Dy467.cif  test_basic.py  test_pdf.py
